--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "9.0.0",
     "private": true,
     "dependencies": {
+        "@dnd-kit/core": "^6.1.0",
+        "@dnd-kit/sortable": "^8.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@emotion/cache": "11.11.0",
         "@emotion/react": "11.11.1",
         "@emotion/styled": "11.11.0",
@@ -37,6 +40,7 @@
         "react": "18.2.0",
         "react-app-alias": "2.2.2",
         "react-autosuggest": "10.1.0",
+        "react-beautiful-dnd": "^13.1.1",
         "react-dom": "18.2.0",
         "react-draft-wysiwyg": "1.15.0",
         "react-hook-form": "7.45.2",
