--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@hookform/resolvers": "3.1.1",
         "@mui/base": "5.0.0-beta.9",
         "@mui/icons-material": "^5.15.14",
+        "@mui/lab": "^5.0.0-alpha.170",
         "@mui/material": "5.14.3",
         "@mui/styles": "5.14.3",
         "@mui/system": "5.14.3",
