--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "date-fns": "2.30.0",
         "draft-js": "0.11.7",
         "draftjs-to-html": "0.9.1",
+        "firebase": "^10.11.1",
         "framer-motion": "10.12.18",
         "history": "5.3.0",
         "i18next": "23.2.6",
